Learned emmet concepts

--- a/index.html
+++ b/index.html
@@ -70,6 +70,69 @@
       saifi
   </pre>
 
+  <p><img src="" alt=""></p>
+  <article></article>
+  <section></section>
+
+  <section>My name is khushbu</section>
+
+  <p id="para1"></p>  <!--This is an id selector-->
+  <article class="id"></article>
+
+     <div class="container">
+    <section>
+          <ul></ul>
+    </section>
+         </div> 
+
+    <div style="background-color: aqua;">This is my first div</div>
+    <span style="background-color: yellow;">This is my span tag</span>
+
+     <ul>
+        <li>A</li>
+        <li>B</li>
+        <li>C</li>
+        <li>D</li>
+        <li>E</li>
+        <li>F</li>
+        <li>G</li>
+     </ul>
+  
+   <ul>
+    <li>
+        <p>A</p>
+    </li>
+    <li>
+        <p>B</p>
+    </li>
+    <li>
+        <p>C</p>
+    </li>
+    <li>
+        <p>D</p>
+    </li>
+    <li>
+        <p>E</p>
+    </li>
+    <li>
+        <p>F</p>
+    </li>
+    <li>
+        <p>G</p>
+    </li>
+   </ul>
+
+   <nav>
+    <ul></ul>
+    <li><a href="">Home</a></li>
+    <li><a href="">About</a></li>
+    <li><a href="">Contact</a></li>
+    <li><a href="">Login</a></li>
+   </nav>
+
+   <a href="https://khushbusaifi.netlify.app">My portfolio</a> <br>
+   <a href="mailto:khushbusaifi27@gmail.com">Email</a> <br>
+   <a href="tel:2375901827">Call us</a>
 
 </head>
 <body>
