learned table conecpts in HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practise</title>
     Hello Everyone, I am khushbu and i am a Full stack developer.<br>
     I am doing masters at chandigarh university.<br>
     <h1 style="background-color: aqua;">I love coding and explore new technologies.</h1>
@@ -133,6 +133,199 @@
    <a href="https://khushbusaifi.netlify.app">My portfolio</a> <br>
    <a href="mailto:khushbusaifi27@gmail.com">Email</a> <br>
    <a href="tel:2375901827">Call us</a>
+
+   <table border="1">
+
+    <thead>
+        <th>Student ID</th>
+        <th>Student name</th>
+        <th>Gender</th>
+        <th>Age</th>
+    </thead>
+
+    <tbody>
+        <tr>
+        <td>1234</td>
+        <td>Bill</td>
+        <td>Male</td>
+        <td>17</td>
+        </tr>
+
+         <tr>
+        <td>123</td>
+        <td>Mac</td>
+        <td>Male</td>
+        <td>18</td>
+        </tr>
+
+         <tr>
+        <td>12</td>
+        <td>Offen</td>
+        <td>Male</td>
+        <td rowspan="3">17</td>
+        </tr>
+
+         <tr>
+        <td>1</td>
+        <td>James</td>
+        <td>Male</td>
+        </tr>
+
+    </tbody>
+
+   </table>
+
+   <table border="1">
+    <tr>
+        <td>Column 1</td>
+        <td>Column 2</td>
+        <td>Column 3</td>
+    </tr>
+
+    <tr>
+        <td rowspan="2">Row 1 Cell1</td>
+        <td>Row 1 Cell2</td>
+        <td>Row 1 Cell3</td>
+
+    </tr>
+
+    <tr>
+        <td>Row 2 Cell2</td>
+        <td>Row 2 Cell3</td>
+    </tr>
+    
+    <tr>
+        <td colspan="3">Row 3 Cell1</td>
+    </tr>
+   </table>
+
+   <table border="1">
+    <thead>
+        <th>No.</th>
+        <th>Full Name</th>
+        <th>Position</th>
+        <th>Salary</th>
+        <th>Type</th>
+
+    </thead>
+   
+    <tbody>
+         <tr>
+        <td>1</td>
+        <td>Bill gates</td>
+        <td>Founder of microsoft</td>
+        <td>10000$</td>
+        <td rowspan="4">Company Founder</td>
+         </tr>
+
+     <tr>
+        <td>2</td>
+        <td>Steve Jobs</td>
+        <td>Founder of Apple</td>
+        <td>12000$</td>
+        </tr>
+
+        <tr>
+            <td>3</td>
+            <td>Larry page</td>
+            <td>Founder google</td>
+            <td>1000$</td>
+        </tr>
+
+        <tr>
+            <td>4</td>
+            <td>Marks Zuckerberg</td>
+            <td>Founder facebook</td>
+            <td>688614$</td>
+        </tr>
+
+    </tbody>
+
+    <tfoot>
+        <tr>
+            <td colspan="3">Total expenses:</td>
+            <td>65238</td>
+        </tr>
+
+    </tfoot>
+
+   </table>
+
+   <table border="1">
+    <thead>
+        <th>Country</th>
+        <th>State</th>
+        <th>City</th>
+        <th>Street</th>
+        <th>Male</th>
+        <th>Female</th>
+        <th>Others</th>
+        <tbody>
+            <tr>
+                <td rowspan="8">1</td>
+                <td rowspan="4">kerala</td>
+                <td rowspan="2">Cochin</td>
+                <td>New Street</td>
+                <td>500</td>
+                <td>600</td>
+                <td>700</td>
+             </tr>
+
+            <tr>
+                <td>Main street</td>
+                <td>300</td>
+                <td>890</td>
+                <td>879</td>
+            </tr>
+
+            <tr>
+                <td rowspan="2">Trivandrum</td>
+                <td>Park street</td>
+                <td>400</td>
+                <td>600</td>
+                <td>800</td>
+            </tr>
+
+            <tr>
+                <td>MG road</td>
+                <td>200</td>
+                <td>300</td>
+                <td>400</td>
+            </tr>
+
+            <tr>
+                <td >Tamilnadu</td>
+                <td >Chennai</td>
+                <td>Anna nagar</td>
+                <td>600</td>
+                <td>700</td>
+                <td rowspan="4">800</td>
+            </tr>
+
+            <tr>
+                <td >Coimbatore</td>
+                <td>RS Puram</td>
+                <td>500</td>
+                <td>600</td>
+                <td>700</td>
+            </tr>
+            <tr>
+                <td>Surat</td>
+                <td>New street</td>
+                <td>351</td>
+                <td>849</td>
+                <td>52</td>
+            </tr>
+            <tr>
+                <td>Ahmedabad</td>
+                <td>Main road</td>
+                <td>456</td>
+                <td>753</td>
+                <td>159</td>
+            </tr>
+        </tbody>
+    </thead>
+   </table>
 
 </head>
 <body>
