Added forms tags

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </section>
          </div> 
 
-    <div style="background-color: aqua;">This is my first div</div>
-    <span style="background-color: yellow;">This is my span tag</span>
+    <div style="background-color: aqua;">This is my first div</div>  <!---This is an block css---> 
+    <span style="background-color: yellow;">This is my span tag</span> <!---This is an inline css--->
 
      <ul>
         <li>A</li>
