Make Footer Section

--- a/websites/studysync.html
+++ b/websites/studysync.html
@@ -276,5 +276,139 @@
         </div>
     </div>
 
+    <div class="footer-container">
+        <footer class="footer">
+            <div class="footer-top">
+                <div class="comp-logo">
+                    <a class="logo-link" href="#">
+                        <img src="Studysyn.svg" class="logo-svg">
+                        StudySyn
+                    </a>
+                </div>
+                <p class="filler-text">Seamless Learning for Brighter Futures.</p>
+                <div class="social">
+                    <a class="social-link" href="#">
+                        <img src="instagram.svg" class="social-icon"> 
+                    </a>
+
+                     <a class="social-link" href="#">
+                        <img src="linkedin-copy.svg" class="social-icon"> 
+                    </a>
+
+                     <a class="social-link" href="#">
+                        <img src="github.svg" class="social-icon"> 
+                    </a>
+
+                     <a class="social-link" href="#">
+                        <img src="twitter.svg" class="social-icon"> 
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer-grid">
+                 <!-- column 1 -->
+                <div class="footer-grid-column">
+                    <div class="footer-grid-heading">
+                        Products
+                    </div>
+                    <ul class="footer-link-list">
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+
+                         <li>
+                            <a href="#solution" class="footer-link">Solution</a>
+                        </li>
+
+                         <li>
+                            <a href="#Pricing" class="footer-link">Pricing</a>
+                        </li>
+
+                         <li>
+                            <a href="#customers" class="footer-link">Customers</a>
+                        </li>
+                    </ul>
+                </div>
+
+                                 <!-- column 2 -->
+                 <div class="footer-grid-column">
+                    <div class="footer-grid-heading">
+                       Company
+                    </div>
+                    <ul class="footer-link-list">
+                        <li>
+                            <a href="#about" class="footer-link">About</a>
+                        </li>
+
+                         <li>
+                            <a href="#investor relations" class="footer-link">Investor Relations</a>
+                        </li>
+
+                         <li>
+                            <a href="#jobs" class="footer-link">Jobs</a>
+                        </li>
+
+                         <li>
+                            <a href="#press" class="footer-link">Press</a>
+                        </li>
+
+                         <li>
+                            <a href="#blog" class="footer-link">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+
+                                 <!-- column 3 -->
+                 <div class="footer-grid-column">
+                    <div class="footer-grid-heading">
+                        Support
+                    </div>
+                    <ul class="footer-link-list">
+                        <li>
+                            <a href="#contact" class="footer-link">Contact</a>
+                        </li>
+
+                         <li>
+                            <a href="#documentation" class="footer-link">Documentation</a>
+                        </li>
+
+                         <li>
+                            <a href="#chat" class="footer-link">Chat</a>
+                        </li>
+
+                         <li>
+                            <a href="#faq" class="footer-link">FAQ</a>
+                        </li>
+                    </ul>
+                </div>
+
+                                    <!-- column 4 -->
+                 <div class="footer-grid-column">
+                    <div class="footer-grid-heading">
+                       Legal
+                    </div>
+                    <ul class="footer-link-list">
+                        <li>
+                            <a href="#terms of service" class="footer-link">Terms of Service</a>
+                        </li>
+
+                         <li>
+                            <a href="#privacy policy" class="footer-link">Privacy Policy</a>
+                        </li>
+
+                         <li>
+                            <a href="#cookie settings" class="footer-link">Cookie Settings</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+
+    <div class="footer-copyright">
+           © 2025 - Present StudySync. All rights reserved.
+    </div>
+
+</div>
+
 </body>
 </html>
