--- a/js.html
+++ b/js.html
@@ -18,7 +18,8 @@
 </head>
 <body>
 
-    <p>Hello world</p>
+    <p id="p1">Hello world</p>
+    <h1 id="heading1">First Heading</h1>
 
     <script src="index.js"></script>
 </body>
