Studied about eventlistener and add queryselector

--- a/js.html
+++ b/js.html
@@ -18,8 +18,20 @@
 </head>
 <body>
 
+    <div class="div" id="wrapper">
+        <p id="1para" class="p">First para</p>
+        <p id="2para" class="p">second para</p>
+        <p id="3para" class="p">third para</p>
+        <p id="4para" class="p">fourth para</p>
+    </div>
+
     <p id="p1">Hello world</p>
     <h1 id="heading1">First Heading</h1>
+
+    <div class="div">
+        <p id="p2">hello</p>
+        <a id="fanchor" href="https://www.codehelp.in">Click Here</a>
+    </div>
 
     <script src="index.js"></script>
 </body>
